components/vault/baremetal/vault-ui-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    # Replace with IP of host
    - host: vault.192.168.1.151.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: vault-baremetal-helm-ui
              servicePort: 8200
